--- a/views/register.ejs
+++ b/views/register.ejs
@@ -137,7 +137,7 @@
           >
             <option value="" disabled selected>Select your country</option>
             <option value="United States">United States</option>
-            <option value="Canada">Algeria</option>
+            <option value="Algeria">Algeria</option>
             <option value="United Kingdom">United Kingdom</option>
 
             <option value="Germany">Germany</option>
